// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/manager/pip_requirements/extract extractPackageFile() extracts dependencies 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "==0.3.1",
      "datasource": "pypi",
      "depName": "some-package",
      "fromVersion": "0.3.1",
      "lineNumber": 2,
    },
    Object {
      "currentValue": "==1.0.0",
      "datasource": "pypi",
      "depName": "some-other-package",
      "fromVersion": "1.0.0",
      "lineNumber": 3,
    },
    Object {
      "currentValue": "==1.9",
      "datasource": "pypi",
      "depName": "not_semver",
      "fromVersion": "1.9",
      "lineNumber": 4,
    },
  ],
  "registryUrls": Array [
    "http://example.com/private-pypi/",
  ],
}
`;

exports[`lib/manager/pip_requirements/extract extractPackageFile() extracts multiple dependencies 1`] = `
Array [
  Object {
    "currentValue": "==1",
    "datasource": "pypi",
    "depName": "Django",
    "fromVersion": "1",
    "lineNumber": 0,
  },
  Object {
    "currentValue": "==0.6.27",
    "datasource": "pypi",
    "depName": "distribute",
    "fromVersion": "0.6.27",
    "lineNumber": 1,
  },
  Object {
    "currentValue": "==0.2",
    "datasource": "pypi",
    "depName": "dj-database-url",
    "fromVersion": "0.2",
    "lineNumber": 2,
  },
  Object {
    "currentValue": "==2.4.5",
    "datasource": "pypi",
    "depName": "psycopg2",
    "fromVersion": "2.4.5",
    "lineNumber": 3,
  },
  Object {
    "currentValue": "==0.1.2",
    "datasource": "pypi",
    "depName": "wsgiref",
    "fromVersion": "0.1.2",
    "lineNumber": 4,
  },
]
`;

exports[`lib/manager/pip_requirements/extract extractPackageFile() handles comments and commands 1`] = `
Array [
  Object {
    "currentValue": "==1.11.19",
    "datasource": "pypi",
    "depName": "Django",
    "fromVersion": "1.11.19",
    "lineNumber": 0,
  },
  Object {
    "currentValue": "==0.6.27",
    "datasource": "pypi",
    "depName": "distribute",
    "fromVersion": "0.6.27",
    "lineNumber": 1,
    "skipReason": "ignored",
  },
  Object {
    "currentValue": "==0.2",
    "datasource": "pypi",
    "depName": "dj-database-url",
    "fromVersion": "0.2",
    "lineNumber": 2,
  },
  Object {
    "currentValue": "==2.4.5",
    "datasource": "pypi",
    "depName": "psycopg2",
    "fromVersion": "2.4.5",
    "lineNumber": 3,
  },
  Object {
    "currentValue": "==0.1.2",
    "datasource": "pypi",
    "depName": "wsgiref",
    "fromVersion": "0.1.2",
    "lineNumber": 4,
  },
]
`;

exports[`lib/manager/pip_requirements/extract extractPackageFile() handles extras and complex index url 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "==2.0.12",
      "datasource": "pypi",
      "depName": "Django",
      "fromVersion": "2.0.12",
      "lineNumber": 1,
    },
    Object {
      "currentValue": "==4.1.1",
      "datasource": "pypi",
      "depName": "celery",
      "fromVersion": "4.1.1",
      "lineNumber": 2,
    },
    Object {
      "currentValue": " == 3.2.1",
      "datasource": "pypi",
      "depName": "foo",
      "lineNumber": 3,
    },
  ],
  "registryUrls": Array [
    "https://artifactory.company.com/artifactory/api/pypi/python/simple",
  ],
}
`;

exports[`lib/manager/pip_requirements/extract extractPackageFile() handles extra index url 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "==2.0.12",
      "datasource": "pypi",
      "depName": "Django",
      "fromVersion": "2.0.12",
      "lineNumber": 4,
    },
    Object {
      "currentValue": "==4.1.1",
      "datasource": "pypi",
      "depName": "celery",
      "fromVersion": "4.1.1",
      "lineNumber": 5,
    },
    Object {
      "currentValue": " == 3.2.1",
      "datasource": "pypi",
      "depName": "foo",
      "lineNumber": 6,
    },
    Object {
      "currentValue": "==0.3.1",
      "datasource": "pypi",
      "depName": "some-package",
      "fromVersion": "0.3.1",
      "lineNumber": 7,
    },
    Object {
      "currentValue": "==1.0.0",
      "datasource": "pypi",
      "depName": "some-other-package",
      "fromVersion": "1.0.0",
      "lineNumber": 8,
    },
    Object {
      "currentValue": "==1.9",
      "datasource": "pypi",
      "depName": "not_semver",
      "fromVersion": "1.9",
      "lineNumber": 9,
    },
  ],
  "registryUrls": Array [
    "https://artifactory.company.com/artifactory/api/pypi/python/simple",
    "http://example.com/private-pypi/",
  ],
}
`;

exports[`lib/manager/pip_requirements/extract extractPackageFile() handles extra index url and defaults without index 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "==2.0.12",
      "datasource": "pypi",
      "depName": "Django",
      "fromVersion": "2.0.12",
      "lineNumber": 3,
    },
    Object {
      "currentValue": "==4.1.1",
      "datasource": "pypi",
      "depName": "celery",
      "fromVersion": "4.1.1",
      "lineNumber": 4,
    },
    Object {
      "currentValue": " == 3.2.1",
      "datasource": "pypi",
      "depName": "foo",
      "lineNumber": 5,
    },
    Object {
      "currentValue": "==0.3.1",
      "datasource": "pypi",
      "depName": "some-package",
      "fromVersion": "0.3.1",
      "lineNumber": 6,
    },
    Object {
      "currentValue": "==1.0.0",
      "datasource": "pypi",
      "depName": "some-other-package",
      "fromVersion": "1.0.0",
      "lineNumber": 7,
    },
    Object {
      "currentValue": "==1.9",
      "datasource": "pypi",
      "depName": "not_semver",
      "fromVersion": "1.9",
      "lineNumber": 8,
    },
  ],
  "registryUrls": Array [
    "http://example.com/private-pypi/",
    "AnExistingDefaultUrl",
  ],
}
`;
